# robota2320-bot

./: .env.example  .gitignore  GEMINI.md  main.py  pyproject.toml  requirements.txt
bot/: config.py
bot/database/: models.py
bot/handlers/: common.py  creating.py  looking.py
bot/keyboards/: builders.py
bot/states/: job.py
