[project]
name = "robota2320-bot"
version = "0.1.0"
description = "Telegram bot for job search and posting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
